tests/error/type_match/base_case_const_to_non_const_ref.bz
// error: unable to match value of type 'i32' to '&mut i32'
// note: mismatched mutability of types 'i32' and 'mut i32'
function test()
{
	let ci = 0i32;
	let _: &mut i32 = ci;
}
